--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
+* {
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    background: #f1f1f1;
+}
+#root {
+    width: 100%;
+    height: 100%;
+}
+
 .App {
-  text-align: center;
+    padding-bottom: 80px;
+}
+.header {
+    font-size: 22px;
+    font-weight: bold;
+    font-style: italic;
+    color: #f1f1f1;
+    background: #3367d8;
+    padding: 40px;
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.note {
+    display: flex;
+    justify-content: space-between;
+    color: #111010;
+    height: 40px;
+    padding: 40px;
+    margin: 20px;
+    background: #fff;
+    border: solid 1px #e9e9e9;
+    cursor: pointer;
+    box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 1);
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 1);
+    -moz-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.1);
+    transition: transform .2s ease;
+}
+.note:hover {
+    transform: scale(1.02);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.button {
+    position: fixed;
+    z-index: 1;
+    right: 40px;
+    bottom: 40px;
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    text-align: center;
+    line-height: 80px;
+    font-size: 28px;
+    font-weight: bold;
+    color: #f1f1f1;
+    background: #3367d8;
+    cursor: pointer;
+    box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.8);
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.8);
+    -moz-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.8);
+    transition: transform .06s ease;
+}
+
+.btn:hover {
+    transform: scale(1.2);
+}
+
+.textInput {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    line-height: 80px;
+    padding: 0 20px;
+    border: none;
+    outline: none;
+    color: #f1f1f1;
+    background: #3367d8;
+    font-size: 16px;   
+}
+::placeholder { 
+    color: #f1f1f1;
+    opacity: 1; 
+    font-size: 14px;
   }
+
+.deleteBtn{
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    background-color: crimson;
+    text-align: center;
+    margin-top: -15px;
+    box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.8);
+    cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.editBtn{
+    border-radius: 10%;
+    width: 40px;
+    height: 40px;
+    background-color: rgb(30, 8, 226);
+    text-align: center;
+    margin-top: -15px;
+    box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.8);
+    cursor: pointer;
 }
