--- a/src/App.css
+++ b/src/App.css
@@ -113,3 +113,30 @@ body {
     box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.8);
     cursor: pointer;
 }
+
+.noteField{
+    border: none;
+    font-size: 20px;
+
+}
+
+.clearAllBtn{
+    position: fixed;
+    z-index: 1;
+    right: 150px;
+    bottom: 40px;
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    text-align: center;
+    line-height: 80px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #f1f1f1;
+    background: #e22929;
+    cursor: pointer;
+    box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.8);
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.8);
+    -moz-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.8);
+    transition: transform .06s ease;
+}
